--- a/Actividades/TP 2/TP2-Baldezzari.ipynb
+++ b/Actividades/TP 2/TP2-Baldezzari.ipynb
@@ -536,6 +536,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "100368be",
+   "metadata": {},
+   "source": [
+    "#### Probando diferentes clasificadores\n",
+    "\n",
+    "##### SVM\n",
+    "\n",
+    "Se prueba primero un clasificador [SVM](https://scikit-learn.org/stable/modules/generated/sklearn.svm.SVC.html).\n",
+    "\n",
+    "- [Parámetros RBF de un SVM](https://scikit-learn.org/stable/auto_examples/svm/plot_rbf_parameters.html)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "2b95a542",
@@ -543,25 +557,279 @@
    "outputs": [],
    "source": [
     "# TODO: Importar la función del clasificador a usar\n",
+    "from sklearn.svm import SVC #https://scikit-learn.org/stable/modules/generated/sklearn.svm.SVC.html\n",
+    "from sklearn.metrics import accuracy_score\n",
     "\n",
-    "# TODO completar la lista siguiente con los parámetros a explorar \n",
-    "param_list = # [...] \n",
-    "# Si se va a explorar más de un hiperparámetro a la vez, se puede hacer una lista \n",
-    "# combinando ambos:\n",
-    "# param_list = [(p1, q1), (p2, q2), ...]\n",
-    "# O bien hacer dos ciclos for, uno por cada hiperparámetro\n",
+    "from utils import plot_decision_function\n",
     "\n",
-    "for p in param_list:\n",
+    "hiperParams = {\"kernels\": [\"linear\", \"rbf\"],\n",
+    "    \"gammaValues\": [1e-2, 1e-1, 1, 1e+1, 1e+2, \"scale\", \"auto\"],\n",
+    "    \"CValues\": [8e-1,9e-1, 1, 1e2, 1e3]\n",
+    "    }\n",
+    "\n",
+    "clasificadoresSVM = {\"linear\": list(),\n",
+    "                  \"rbf\": list()\n",
+    "    }\n",
+    "\n",
+    "rbfResults = np.zeros((len(hiperParams[\"gammaValues\"]), len(hiperParams[\"CValues\"])))\n",
+    "linearResults = list()\n",
+    "\n",
+    "for i, kernel in enumerate(hiperParams[\"kernels\"]):\n",
     "    \n",
-    "    # TODO: Instanciar el modelo con el parámetro p\n",
-    "    \n",
-    "    # TODO: Entrenar el modelo\n",
+    "    if kernel != \"linear\":\n",
+    "        for j, gamma in enumerate(hiperParams[\"gammaValues\"]):\n",
+    "            \n",
+    "            for k, C in enumerate(hiperParams[\"CValues\"]):\n",
+    "                #Instanciamos el modelo para los hipermarametros\n",
+    "                model = SVC(C = C, kernel = kernel, gamma = gamma)\n",
+    "                \n",
+    "                #entreno el modelo\n",
+    "                model.fit(Xtrain, ytrain)\n",
+    "                \n",
+    "                #predecimos con los datos en Xoptim\n",
+    "                pred = model.predict(Xoptim)\n",
+    "                accu = f1_score(yoptim, pred)\n",
+    "                \n",
+    "                rbfResults[j,k] = accu\n",
+    "                \n",
+    "                clasificadoresSVM[kernel].append((C, gamma, model, accu))\n",
+    "    else:\n",
+    "        for k, C in enumerate(hiperParams[\"CValues\"]):\n",
+    "            \n",
+    "            #Instanciamos el modelo para los hipermarametros\n",
+    "            model = SVC(C = C, kernel = kernel)\n",
+    "            #entreno el modelo\n",
+    "            model.fit(Xtrain, ytrain)\n",
+    "            pred = model.predict(Xoptim)\n",
+    "            accu = f1_score(yoptim, pred)\n",
+    "            linearResults.append(accu)\n",
+    "            #predecimos con los datos en Xoptim\n",
+    "            \n",
+    "            clasificadoresSVM[kernel].append((C, model, accu))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c640443",
+   "metadata": {},
+   "source": [
+    "Grafico accuracies obtenidas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed39ce60",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(15,10))\n",
+    "plt.imshow(rbfResults)\n",
+    "plt.xlabel(\"Valor de C\")\n",
+    "plt.xticks(np.arange(len(hiperParams[\"CValues\"])), hiperParams[\"CValues\"])\n",
+    "plt.ylabel(\"Valor de Gamma\")\n",
+    "plt.yticks(np.arange(len(hiperParams[\"gammaValues\"])), hiperParams[\"gammaValues\"])\n",
+    "plt.colorbar();\n",
     "\n",
-    "    # TODO: generar una predicción para Xoptim   \n",
-    "    pred = #...\n",
-    "    f1 = f1_score(yoptim, pred)\n",
-    "     \n",
-    "    print(\"nombre_modelo\", p, f1)"
+    "for i in range(rbfResults.shape[0]):\n",
+    "    for j in range(rbfResults.shape[1]):\n",
+    "        plt.text(j, i, \"{:.2f}\".format(rbfResults[i, j]), va='center', ha='center')\n",
+    "plt.show()\n",
+    "\n",
+    "num = np.arange(1,len(linearResults)+1)\n",
+    "plt.plot([str(C) for C in hiperParams[\"CValues\"]], np.asarray(linearResults)*100)\n",
+    "plt.title(\"Accuracy para predicciones usando kernel 'linear'\")\n",
+    "plt.xlabel(\"Valor de C\") \n",
+    "plt.ylabel(\"Accuracy (%)\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f654f25e",
+   "metadata": {},
+   "source": [
+    "##### K-nn\n",
+    "\n",
+    "A continuación de prueba un clasificador por [K-nn](https://scikit-learn.org/stable/modules/generated/sklearn.neighbors.KNeighborsClassifier.html).\n",
+    "```python\n",
+    "\"\"\"\n",
+    "Probando un Knn\n",
+    "https://scikit-learn.org/stable/modules/generated/sklearn.neighbors.KNeighborsClassifier.html\n",
+    "\n",
+    "- Hiperparametros del modelo Knn\n",
+    "\n",
+    "print(modelo.get_params())\n",
+    "\n",
+    "{'algorithm': 'auto', 'leaf_size': 30, 'metric': 'minkowski', 'metric_params': None,\n",
+    " 'n_jobs': None, 'n_neighbors': 5, 'p': 2, 'weights': 'uniform'}\n",
+    "\"\"\"\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8009fd1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hiperParams = {\"algorithms\": [\"ball_tree\", \"kd_tree\"],\n",
+    "               \"metrics\": [\"euclidean\",\"chebyshev\",\"minkowski\",\"manhattan\"],\n",
+    "               \"weights\": [\"uniform\",\"distance\"]}\n",
+    "\n",
+    "# hiperParams = {\"algorithms\": [\"ball_tree\"],\n",
+    "#                \"metrics\": [\"euclidean\"],\n",
+    "#                \"weights\": [\"uniform\"]}\n",
+    "\n",
+    "clasificadoresKnn = {\"ball_tree\": list(),\n",
+    "                     \"kd_tree\": list()}\n",
+    "\n",
+    "# neighborsNum = {\"5\": dict(), \"6\": dict(), \"7\": dict(), \"8\": dict(),\n",
+    "                # \"9\": dict(), \"10\": dict(), \"11\": dict(), \"12\": dict()}\n",
+    "\n",
+    "ball_treeResults = np.zeros((len(hiperParams[\"metrics\"]), len(hiperParams[\"weights\"])))\n",
+    "kd_treeResults = np.zeros((len(hiperParams[\"metrics\"]), len(hiperParams[\"weights\"])))\n",
+    "\n",
+    "\n",
+    "# accuForNeighNum = {\"5\": dict(), \"6\": dict(), \"7\": dict(), \"8\": dict(),\n",
+    "                   # \"9\": dict(), \"10\": dict(), \"11\": dict(), \"12\": dict()}\n",
+    "\n",
+    "neighborsNum = list()\n",
+    "accuForNeighNum = list()\n",
+    "\n",
+    "for n_neighbors in np.arange(5,11):#neighborsNum.keys():\n",
+    "    \n",
+    "    for i, algorithm in enumerate(hiperParams[\"algorithms\"]):\n",
+    "        \n",
+    "        for j, metric in enumerate(hiperParams[\"metrics\"]):\n",
+    "            \n",
+    "            for k, weight in enumerate(hiperParams[\"weights\"]):\n",
+    "                #Instanciamos el modelo para los hipermarametros\n",
+    "                model = KNeighborsClassifier(n_neighbors = int(n_neighbors),\n",
+    "                                             weights = weight,\n",
+    "                                             algorithm = algorithm,\n",
+    "                                             metric = metric)\n",
+    "                #entreno el modelo\n",
+    "                model.fit(Xtrain, ytrain)\n",
+    "                \n",
+    "                #predecimos con los datos en Xoptim\n",
+    "                pred = model.predict(Xoptim)\n",
+    "                accu = f1_score(yoptim, pred)\n",
+    "                \n",
+    "                if algorithm == \"ball_tree\":\n",
+    "                    ball_treeResults[j,k] = accu\n",
+    "                    \n",
+    "                if algorithm == \"kd_tree\":\n",
+    "                    kd_treeResults[j,k] = accu\n",
+    "                \n",
+    "                clasificadoresKnn[algorithm].append((weight, metric,model))\n",
+    "\n",
+    "    # neighborsNum[n_neighbors] = clasificadoresKnn\n",
+    "    # accuForNeighNum[n_neighbors] = {\"accu_ball_tree\": ball_treeResults,\n",
+    "    #                                 \"accu_kd_tree\": kd_treeResults}\n",
+    "    \n",
+    "    neighborsNum.append(clasificadoresKnn)\n",
+    "    accuForNeighNum.append({\"accu_ball_tree\": ball_treeResults,\n",
+    "                            \"accu_kd_tree\": kd_treeResults})\n",
+    "    \n",
+    "    ball_treeResults = np.zeros((len(hiperParams[\"metrics\"]), len(hiperParams[\"weights\"])))\n",
+    "    kd_treeResults = np.zeros((len(hiperParams[\"metrics\"]), len(hiperParams[\"weights\"])))\n",
+    "    clasificadoresKnn = {\"ball_tree\": list(),\n",
+    "                     \"kd_tree\": list()}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c8455337",
+   "metadata": {},
+   "source": [
+    "Grafico accuracies obtenidos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f491406",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Valores de accuracy obtenido para algoritmo \"accu_ball_tree\" con knn = 5\n",
+    "\n",
+    "title = \"Accuracies - knn = 5 - accu_ball_tree\"\n",
+    "\n",
+    "plt.figure(figsize=(15,10))\n",
+    "plt.title(title)\n",
+    "plt.imshow(accuForNeighNum[0][\"accu_ball_tree\"], cmap = \"Greens_r\")\n",
+    "plt.xlabel(\"Weights\")\n",
+    "plt.xticks(np.arange(len(hiperParams[\"weights\"])), hiperParams[\"weights\"])\n",
+    "plt.ylabel(\"Metric\")\n",
+    "plt.yticks(np.arange(len(hiperParams[\"metrics\"])), hiperParams[\"metrics\"])\n",
+    "plt.colorbar();\n",
+    "\n",
+    "for i in range(accuForNeighNum[0][\"accu_ball_tree\"].shape[0]):\n",
+    "    for j in range(accuForNeighNum[0][\"accu_ball_tree\"].shape[1]):\n",
+    "        plt.text(j, i, \"{:.2f}\".format(accuForNeighNum[0][\"accu_ball_tree\"][i, j]),\n",
+    "                 va='center', ha='center')\n",
+    "        \n",
+    "save = True\n",
+    "if save:\n",
+    "    pathACtual = os.getcwd()\n",
+    "    newPath = os.path.join(pathACtual, \"figs\")\n",
+    "    os.chdir(newPath)\n",
+    "    plt.savefig(title, dpi = 200)\n",
+    "    os.chdir(pathACtual)\n",
+    "    \n",
+    "plt.show()\n",
+    "\n",
+    "\n",
+    "#Valores de accuracy obtenido para algoritmos \"accu_ball_tree\" y \"accu_kd_tree\" con knn = 5 a knn = 10\n",
+    "\n",
+    "fig, axes = plt.subplots(2, 6, figsize=(20, 15),\n",
+    "                         gridspec_kw = dict(hspace=0.1, wspace=0.2))\n",
+    "title = \"Accuracies totales - accu_ball_tree (en verde) - accu_kd_tree (en azul)\"\n",
+    "\n",
+    "fig.suptitle(title, fontsize=28)\n",
+    "\n",
+    "axes = axes.reshape(-1)\n",
+    "    \n",
+    "for n_neighbors in np.arange(0,6):\n",
+    "    axes[n_neighbors].set_xlabel('Weights') \n",
+    "    axes[n_neighbors+6].set_xlabel('Weights')\n",
+    "    if n_neighbors == 0:\n",
+    "        axes[n_neighbors].set_ylabel('Metrics')\n",
+    "        axes[n_neighbors+6].set_ylabel('Metrics')\n",
+    "    \n",
+    "    axes[n_neighbors].set_title(f\"Accuracies\\n knn = {n_neighbors+5}\\n accu_ball_tree\")\n",
+    "    axes[n_neighbors+6].set_title(f\"Accuracies\\n knn = {n_neighbors+5}\\n accu_kd_tree\")\n",
+    "    \n",
+    "    axes[n_neighbors].imshow(accuForNeighNum[0][\"accu_ball_tree\"], cmap = \"Greens_r\")\n",
+    "    axes[n_neighbors+6].imshow(accuForNeighNum[0][\"accu_kd_tree\"], cmap = \"Blues_r\")\n",
+    "\n",
+    "    axes[n_neighbors].set_xticks(np.arange(len(hiperParams[\"weights\"])))\n",
+    "    axes[n_neighbors+6].set_xticks(np.arange(len(hiperParams[\"weights\"])))\n",
+    "    \n",
+    "    axes[n_neighbors].set_xticklabels(hiperParams[\"weights\"])\n",
+    "    axes[n_neighbors+6].set_xticklabels(hiperParams[\"weights\"])\n",
+    "    \n",
+    "    if n_neighbors == 0:\n",
+    "        axes[n_neighbors].set_yticks(np.arange(len(hiperParams[\"metrics\"])))\n",
+    "        axes[n_neighbors].set_yticklabels(hiperParams[\"metrics\"])\n",
+    "        axes[n_neighbors+6].set_yticks(np.arange(len(hiperParams[\"metrics\"])))\n",
+    "        axes[n_neighbors+6].set_yticklabels(hiperParams[\"metrics\"])\n",
+    "    else:\n",
+    "        axes[n_neighbors].yaxis.set_visible(False)\n",
+    "        axes[n_neighbors+6].yaxis.set_visible(False)\n",
+    "        \n",
+    "    for i in range(accuForNeighNum[n_neighbors][\"accu_ball_tree\"].shape[0]):\n",
+    "        for j in range(accuForNeighNum[n_neighbors][\"accu_ball_tree\"].shape[1]):\n",
+    "            axes[n_neighbors].text(j, i, \"{:.2f}\".format(accuForNeighNum[n_neighbors][\"accu_ball_tree\"][i, j]),\n",
+    "                     va='center', ha='center') \n",
+    "            \n",
+    "    for i in range(accuForNeighNum[n_neighbors][\"accu_kd_tree\"].shape[0]):\n",
+    "        for j in range(accuForNeighNum[n_neighbors][\"accu_kd_tree\"].shape[1]):\n",
+    "            axes[n_neighbors+6].text(j, i, \"{:.2f}\".format(accuForNeighNum[n_neighbors][\"accu_kd_tree\"][i, j]),\n",
+    "                     va='center', ha='center') "
    ]
   }
  ],
