--- a/Encuentros/Encuentro 4/Agrupamiento_ caso de estudio.ipynb
+++ b/Encuentros/Encuentro 4/Agrupamiento_ caso de estudio.ipynb
@@ -14550,7 +14550,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -14564,7 +14564,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
