--- a/Actividades/TP 4/TP4 Guia de trabajos practicos.ipynb
+++ b/Actividades/TP 4/TP4 Guia de trabajos practicos.ipynb
@@ -52,9 +52,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:aadoc]",
+   "display_name": "Python [conda env:AADoc]",
    "language": "python",
-   "name": "conda-env-aadoc-py"
+   "name": "conda-env-AADoc-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -66,7 +66,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
